@@ -1,29 +1,29 @@
 name = IPC-SRLock
 
 [Prereqs]
-perl              = 5.010001
+perl                 = 5.010001
 namespace::autoclean = 0.19
-Class::Null       = 1.09
-Date::Format      = 2.24
-File::DataClass   = v0.35.0
-IPC::ShareLite    = 0.17
-Moo               = 1.004002
-Time::Elapsed     = 0.29
-Try::Tiny         = 0.18
-Type::Tiny        = 0.030
+Class::Null          = 1.09
+Date::Format         = 2.24
+File::DataClass      = v0.35.0
+IPC::ShareLite       = 0.17
+Moo                  = 1.004002
+Time::Elapsed        = 0.29
+Try::Tiny            = 0.18
+Type::Tiny           = 0.030
 
 [Prereqs / Recommends]
-Cache::Memcached  = 1.24
+Cache::Memcached     = 1.24
 
 [Prereqs / ConfigureRequires]
-version           = 0.88
-Module::Build     = 0.4202
+version              = 0.88
+Module::Build::Tiny  = 0
 
 [Prereqs / BuildRequires]
-version           = 0.88
-File::DataClass   = v0.27.0
-Module::Build     = 0.4202
-Test::Requires    = 0.06
+version              = 0.88
+File::DataClass      = v0.27.0
+Module::Build::Tiny  = 0
+Test::Requires       = 0.06
 
 [Meta::Dynamic::Config]
 
