@@ -5,18 +5,9 @@ use FindBin               qw( $Bin );
 use lib               catdir( $Bin, updir, 'lib' );
 
 use Test::More;
+use Test::Requires '5.010001';
 use Test::Requires { version => 0.88 };
-use Module::Build;
 
-my $notes = {}; my $perl_ver;
-
-BEGIN {
-   my $builder = eval { Module::Build->current };
-      $builder and $notes = $builder->notes;
-      $perl_ver = $notes->{min_perl_version} || 5.008;
-}
-
-use Test::Requires "${perl_ver}";
 use English qw( -no_match_vars );
 use File::DataClass::Exception;
 
